# opc-harness

./: .env.development  .env.example  .gitignore  .prettierignore  AGENTS.md  AGENT_LOOP_IMPLEMENTATION.md  ARCHITECTURE.md  DECENTRALIZED_ARCHITECTURE.md  FULLY_DECENTRALIZED_ARCHITECTURE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL_VS_TOOLS.md  QUICKSTART_DECENTRALIZED.md  QUICKSTART_FULLY_DECENTRALIZED.md  README.md  RUST_BUILD_OPTIMIZATION.md  SPRINT-DOCUMENT-GUIDELINES.md  TESTING_GUIDE.md  VERSION_PLANNING.md  convert-to-ico.ps1  create-icon.ps1  create-icons.mjs  eslint.config.js  eslint.config.mjs  harness-check-final.txt  harness-check-output.txt  index.html  install-rust-and-run.bat  install-vs-build-tools.bat  package-lock.json  package.json  prettier.config.js  rust-test-errors.txt  sprint-plan.md  sprint1-mvp.md  tailwind.config.js  test-diff-viewer.html  tore package.json  tsconfig.json  vite.config.ts  (+2 more)
src-tauri/: AGENTS.md  Cargo.toml  full_output.txt  full_test_output.txt  rust-test-output.txt  tauri.conf.json  test_output.txt
src-tauri/icons/: icon.icns
src-tauri/src/: agent_protocol.rs  error.rs  main.rs  test_utils.rs
src-tauri/src/agent/: agent_loop.rs  agent_manager.rs  agent_manager_commands.rs  agent_manager_core.rs  agent_manager_persistence.rs  agent_manager_types.rs  agent_stdio.rs  agent_worker.rs  agent_worker_commands.rs  ai_cli_interaction.rs  ai_code_generator.rs  branch_manager.rs  checkpoint_manager.rs  code_change_tracker.rs  code_diff_visualizer.rs  code_review_agent.rs  coding_agent.rs  daemon.rs  daemon_core.rs  daemon_types.rs  debug_agent.rs  decentralized_commands.rs  git_commit_assistant.rs  initializer_agent.rs  messages.rs  mock_ai_provider.rs  mod.rs  mr_creation_agent.rs  mr_description_generator.rs  native_coding_agent.rs  performance_benchmark_agent.rs  prd_parser.rs  realtime_code_suggestions.rs  realtime_performance_monitor.rs  realtime_review_manager.rs  retry_engine.rs  test_generator_agent.rs  test_runner_agent.rs  types.rs  websocket_manager.rs  (+2 more)
src-tauri/src/agent/debug_agent/: core.rs  diagnoser.rs  parsers.rs  types.rs
src-tauri/src/agent/decentralized/: distributed_lock.rs  event_bus.rs  node.rs
src-tauri/src/agent/git_commit_assistant/: analyzer.rs  config.rs  generator.rs  mod.rs  status.rs  types.rs  validator.rs
src-tauri/src/agent/tools/: code_search.rs  dependency_manager.rs  filesystem.rs  git.rs  mod.rs  quality.rs
src-tauri/src/ai/: ai_types.rs  anthropic.rs  anthropic_impl.rs  codefree_impl.rs  deepl_impl.rs  glm.rs  glm_impl.rs  kimi.rs  kimi_impl.rs  minimax.rs  minimax_impl.rs  mod.rs  openai.rs  openai_impl.rs  openai_provider.rs  provider_core.rs  providers_impl.rs  service_manager.rs
src-tauri/src/ai/router/: mod.rs
src-tauri/src/cli/: claude.rs  codex.rs  kimi.rs  mod.rs
src-tauri/src/commands/: ai.rs  cli.rs  config.rs  console_log.rs  database.rs  mod.rs  observability.rs  project.rs  quality.rs  retry.rs  system.rs  user_preference.rs
src-tauri/src/commands/ai/: api_key.rs  chat.rs  claude.rs  competitor.rs  error_handler.rs  glm.rs  kimi.rs  marketing.rs  (+6 more)
src-tauri/src/db/: agent_alerts.rs  agent_logs.rs  agent_session_repository.rs  agent_traces.rs  ai_config_repository.rs  cli_session_repository.rs  database.rs  issue_repository.rs  migrations.rs  milestone_repository.rs  mod.rs  project_repository.rs  repository.rs  sprint_repository.rs  user_story_repository.rs
src-tauri/src/file/: backup.rs  file_applier.rs  mod.rs
src-tauri/src/models/: agent_alert.rs  agent_log.rs  agent_trace.rs  mod.rs
src-tauri/src/prompts/: code_generation.rs  competitor_analysis.rs  mod.rs  prd_template.rs  sprint_assignment.rs  user_persona.rs  user_story_decomposition.rs
src-tauri/src/quality/: eslint_checker.rs  feedback_processor.rs  mod.rs  prd_checker.rs  prd_consistency_checker.rs  prd_deep_analyzer.rs  prd_feasibility_assessor.rs  prd_iteration_manager.rs  task_decomposer.rs
src-tauri/src/services/: ai_service.rs  cli_service.rs  config_service.rs  db_service.rs  file_service.rs  keyring_service.rs  mod.rs  observability_service.rs  project_service.rs  tool_detection.rs
src-tauri/src/user_preference/: manager.rs  mod.rs
src-tauri/src/utils/: keychain.rs  mod.rs  paths.rs
src-tauri/src/websocket/: mod.rs
src-tauri/tests/: database_git.rs  git_management.rs  integration_test.rs
src-tauri/tests/common/: mod.rs
(+778 files in other folders)
