[package]
name = "opc-harness"
version = "0.1.0"
description = "AI驱动的一人公司操作系统"
authors = ["OPC-HARNESS Team"]
edition = "2021"

# 编译优化配置 (加速开发体验)
[profile.dev]
opt-level = 0          # Debug 模式不优化
debug = true
split-debuginfo = "unpacked"  # 分离调试信息,加速链接
incremental = true     # 启用增量编译

[profile.dev.package."*"]
opt-level = 0          # 依赖也不优化

[profile.release]
opt-level = 3          # Release 模式最大优化
lto = "thin"           # 轻量级链接时优化
codegen-units = 1      # 减少代码生成单元,提升运行时性能
strip = true           # 移除调试符号,减小体积

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
# WebSocket support (US-061)
tokio-tungstenite = "0.21"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
futures = "0.3"
eventsource-stream = "0.2"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
num_cpus = "1.16"
regex = "1.10"
notify = "6.1"
sysinfo = "0.30"
dirs = "5"  # 用于获取用户home目录

# Concurrent data structures for in-memory lock management
dashmap = "5.5"

# Random number generation for decentralized decision making
rand = "0.8"

# Diff/merge utilities for incremental code editing
diffy = "0.4"

# Windows registry access for PATH inheritance
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_Environment"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
